-Updating node_modules and package.json according to dropping FeatherJS and continue with excellent KOA framework.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "houman-project",
   "version": "1.0.0",
   "private": true,
-  "description": "Houman Hadian's doctoral project analytics platform and app",
+  "description": "Houman Hadian's doctoral project analytics platform codebase",
   "keywords": [],
   "homepage": "https://www.github.com/emg110/houman-project",
   "repository": {
@@ -19,53 +19,43 @@
     "jest": "jest"
   },
   "dependencies": {
-    "@feathersjs/authentication-client": "^1.0.11",
-    "@feathersjs/configuration": "^2.0.6",
-    "@feathersjs/errors": "^3.3.6",
-    "@feathersjs/express": "^1.3.1",
-    "@feathersjs/feathers": "^3.3.1",
-    "@feathersjs/rest-client": "^1.4.7",
-    "@feathersjs/socketio": "^3.2.9",
-    "@feathersjs/socketio-client": "^1.2.1",
-    "compression": "^1.7.3",
-    "cors": "^2.8.5",
-    "feathers-hooks-rediscache": "^1.1.5",
-    "feathers-sequelize": "^4.1.1",
-    "helmet": "^3.15.1",
-    "insta-getty": "latest",
-    "instapro": "latest",
-    "instagram-api": "latest",
+    "koa": "latest",
+    "koa-bodyparser": "latest",
+    "koa-logger": "latest",
+    "koa-router": "latest",
+    "koa2-cors": "latest",
+    "koa-passport": "latest",
+    "compression": "latest",
+    "cors": "latest",
+    "helmet": "latest",
     "xmlhttprequest": "latest",
     "xmlhttprequest-cookie": "latest",
     "jetta": "latest",
     "fs-extra": "latest",
     "node-rest-client": "latest",
-    "pg": "^7.8.1",
-    "pg-hstore": "^2.3.2",
-    "serve-favicon": "^2.5.0",
-    "winston": "^3.2.1",
-    "axios": "^0.18.0",
-    "jsdom": "^11.11.0",
-    "koa": "2.3.0",
-    "koa-bodyparser": "4.2.0",
-    "koa-logger": "3.0.1",
-    "koa-router": "7.2.1",
-    "koa2-cors": "^2.0.5",
-    "axios-cookiejar-support": "^0.4.2"
+    "pg": "latest",
+    "pg-hstore": "latest",
+    "knex": "latest",
+    "serve-favicon": "latest",
+    "winston": "latest",
+    "jsdom": "latest"
+
   },
   "devDependencies": {
-    "jest": "^24.1.0",
-    "nodemon": "^1.18.10",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "15.0.2",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0",
-    "mocha": "3.4.2",
-    "should": "11.2.1",
-    "supertest": "3.0.0"
+    "jest": "latest",
+    "nodemon": "latest",
+    "request": "latest",
+    "request-promise": "latest",
+    "eslint": "latest",
+    "eslint-config-airbnb": "latest",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsx-a11y": "latest",
+    "eslint-plugin-react": "latest",
+    "mocha": "latest",
+    "chai": "latest",
+    "chai-http": "latest",
+    "should": "latest",
+    "supertest": "latest"
   },
   "engines": {
     "node": "^8.0.0",
