--- a/package.json
+++ b/package.json
@@ -5,21 +5,32 @@
   "description": "Houman Hadian's doctoral project analytics platform codebase",
   "keywords": [],
   "homepage": "https://www.github.com/emg110/houman-project",
+  "bugs": {},
   "repository": {
     "type": "git",
     "url": "https://www.github.com/emg110/houman-project.git"
   },
   "license": "MIT",
-  "main": "backend/index.js",
+  "main": "etl/index.js",
+  "directories": {
+    "lib": "src",
+    "config": "config/",
+    "test": "test/"
+  },
   "scripts": {
-    "test": "npm run eslint && NODE_ENV= npm run jest",
-    "eslint": "eslint src/. test/. --config .eslintrc.json",
     "dev": "nodemon src/",
-    "start": "node ./backend/index.js",
-    "jest": "jest"
+    "eslint": "eslint src/. test/. --config .eslintrc.json",
+    "jest": "jest",
+    "start": "node ./src",
+    "test": "npm run eslint && NODE_ENV= npm run jest"
   },
   "dependencies": {
+    "@feathersjs/authentication": "latest",
     "@feathersjs/authentication-client": "latest",
+    "@feathersjs/authentication-jwt": "^2.0.10",
+    "@feathersjs/authentication-local": "^1.2.9",
+    "@feathersjs/authentication-oauth2": "^1.3.1",
+    "@feathersjs/client": "latest",
     "@feathersjs/configuration": "latest",
     "@feathersjs/errors": "latest",
     "@feathersjs/express": "latest",
@@ -27,39 +38,67 @@
     "@feathersjs/rest-client": "latest",
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
-    "koa": "latest",
-    "koa-bodyparser": "latest",
-    "koa-logger": "latest",
-    "koa-router": "latest",
-    "koa2-cors": "latest",
-    "koa-passport": "latest",
-    "ramda": "latest",
+    "@tensorflow/tfjs": "latest",
+    "camo": "latest",
     "compression": "latest",
     "cors": "latest",
-    "helmet": "latest",
-    "jetta": "latest",
+    "crossfilter2": "latest",
+    "ejs": "latest",
+    "express-ejs-layouts": "latest",
+    "feathers-memory": "latest",
+    "feathers-nedb": "latest",
+    "feathers-objection": "latest",
     "fs-extra": "latest",
-    "node-rest-client": "latest",
+    "helmet": "latest",
+    "immutable": "latest",
+    "jetta": "latest",
+    "knex": "latest",
+    "koa": "latest",
+    "koa-better-body": "latest",
+    "koa-bodyparser": "latest",
+    "koa-ejs": "latest",
+    "koa-json": "latest",
+    "koa-logger": "latest",
+    "koa-passport": "latest",
+    "koa-router": "latest",
+    "koa-session": "latest",
+    "koa2-cors": "latest",
+    "material-design-icons": "latest",
+    "material-design-lite": "latest",
+    "materialize": "latest",
+    "material-icons": "latest",
+    "nedb": "latest",
+    "nedb-promise": "latest",
+    "node-nlp": "latest",
+    "node-postgres-json": "latest",
+    "objection": "latest",
+    "passport": "latest",
+    "passport-local": "latest",
     "pg": "latest",
     "pg-hstore": "latest",
-    "knex": "latest",
+    "pivottable": "latest",
+    "ramda": "latest",
+    "reductio": "latest",
+    "roboto-fontface": "latest",
     "serve-favicon": "latest",
-    "winston": "latest",
-    "jsdom": "latest"
+    "skale": "latest",
+    "socket.io-client": "latest",
+    "universe": "latest",
+    "winston": "latest"
   },
   "devDependencies": {
-    "jest": "latest",
-    "nodemon": "latest",
-    "request": "latest",
-    "request-promise": "latest",
+    "chai": "latest",
+    "chai-http": "latest",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-react": "latest",
+    "jest": "latest",
     "mocha": "latest",
-    "chai": "latest",
-    "chai-http": "latest",
+    "nodemon": "latest",
+    "request": "latest",
+    "request-promise": "latest",
     "should": "latest",
     "supertest": "latest"
   },
