-Adding ETL server config and start to main index of application beside Feathers API server

--- a/package.json
+++ b/package.json
@@ -65,13 +65,14 @@
     "koa2-cors": "latest",
     "material-design-icons": "latest",
     "material-design-lite": "latest",
-    "materialize": "latest",
     "material-icons": "latest",
+    "materialize": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
     "node-nlp": "latest",
     "node-postgres-json": "latest",
     "objection": "latest",
+    "pace-js": "latest",
     "passport": "latest",
     "passport-local": "latest",
     "pg": "latest",
