-Finalizing the circuit for ETL apis and FeathersJS apis plus rendering and piping results via rest and realtime endpoints

--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "mocha": "latest",
     "nodemon": "latest",
     "request": "latest",
-    "request-promise": "latest",
+    "request-promise-native": "latest",
     "should": "latest",
     "supertest": "latest"
   },
