--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "eslint": "eslint src/. test/. --config .eslintrc.json",
     "jest": "jest",
     "start": "node ./src",
-    "test": "npm run eslint && NODE_ENV= npm run jest"
+    "start-all": "",
+    "test": "npm run eslint && NODE_ENV= npm run jest",
+    "start-ui": "react-scripts start ./frontend/src",
+    "build-ui": "react-scripts build ./frontend/src",
+    "test-ui": "react-scripts test ./frontend/src"
   },
   "dependencies": {
     "@feathersjs/authentication": "latest",
@@ -38,6 +42,7 @@
     "@feathersjs/rest-client": "latest",
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
+    "feathers-findone": "latest",
     "@tensorflow/tfjs": "latest",
     "jquery": "^3.3.1",
     "compression": "latest",
@@ -63,10 +68,11 @@
     "koa-router": "latest",
     "koa-session": "latest",
     "koa2-cors": "latest",
+    "koa-websocket": "latest",
     "material-design-icons": "latest",
     "material-design-lite": "latest",
     "material-icons": "latest",
-    "materialize": "latest",
+    "materialize-css": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
     "node-nlp": "latest",
@@ -110,5 +116,14 @@
   "authors": [
     "M.Ghiasi <emg110@gmail.com>",
     "H.Hadian <a58976@ualg.pt>"
+  ],
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
   ]
 }
