-Implemented bootstrap 4 - Implemented github links - Implemented project's powerpoint carosel with bootstrap 4 carosel component - Minor changes to style.css

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "feathers-findone": "latest",
     "@tensorflow/tfjs": "latest",
     "jquery": "^3.3.1",
+    "bootstrap": "latest",
     "compression": "latest",
     "cors": "latest",
     "crossfilter2": "latest",
