-Implemented hit counter for buttons -Implemented task done label for buttons -Replaced input element (button type) with buttons -Handled Instagram errors temporarily (Just console.log() them for now but they will be sent to client in realtime via errors channel soon!)

--- a/package.json
+++ b/package.json
@@ -44,11 +44,15 @@
     "@feathersjs/socketio-client": "latest",
     "@tensorflow/tfjs": "latest",
     "jquery": "^3.3.1",
-    "bootstrap": "latest",
+    "bootstrap": "^4.3.1",
     "compression": "latest",
     "cors": "latest",
     "crossfilter2": "latest",
+    "echarts-cities-js": "",
+    "echarts-countries-js": "",
     "ejs": "latest",
+    "echarts": "latest",
+    "echarts-wordcloud": "latest",
     "express-ejs-layouts": "latest",
     "feathers-memory": "latest",
     "feathers-nedb": "latest",
@@ -69,10 +73,6 @@
     "koa-session": "latest",
     "koa2-cors": "latest",
     "koa-websocket": "latest",
-    "material-design-icons": "latest",
-    "material-design-lite": "latest",
-    "material-icons": "latest",
-    "materialize-css": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
     "node-nlp": "latest",
@@ -88,7 +88,6 @@
     "reductio": "latest",
     "roboto-fontface": "latest",
     "serve-favicon": "latest",
-    "skale": "latest",
     "socket.io-client": "latest",
     "universe": "latest",
     "winston": "latest"
