- Fixed some hits counter minor issues - Added bootstrap pulse to hit counter badges on buttons - Moved javascript references to a separated ejs file named layouts-javascripts.ejs, referenced by layout-footer.ejs - Fixed typos in mw-etl-api.js in comments - Implemented NO POST | NO COMMENT | NO LIKES | NO FOLLOWERS | NO FOLLOINGS ... error content with related css styles

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "node-postgres-json": "latest",
     "objection": "latest",
     "pace-js": "latest",
+    "popper.js": "latest",
     "passport": "latest",
     "passport-local": "latest",
     "pg": "latest",
