--- a/package.json
+++ b/package.json
@@ -91,7 +91,8 @@
     "serve-favicon": "latest",
     "socket.io-client": "latest",
     "universe": "latest",
-    "winston": "latest"
+    "winston": "latest",
+    "localforage": "latest"
   },
   "devDependencies": {
     "chai": "latest",
