-Fixed timeout problems temporarily (requests will be moved into a web worker and called via a promise to implement parallelism and stability)

--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
     "feathers-memory": "latest",
     "feathers-nedb": "latest",
     "feathers-objection": "latest",
+    "escape-string-regexp": "latest",
+    "object-path": "latest",
+    "deep-reduce": "latest",
+    "feathers-nedb-fuzzy-search": "latest",
     "fs-extra": "latest",
     "helmet": "latest",
     "immutable": "latest",
