--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,11 @@
   "parserOptions": {
     "ecmaVersion": 2017
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "standard",
+    "airbnb",
+    "eslint:recommended"
+  ],
   "rules": {
     "indent": [
       "error",
