--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "socialytics",
   "version": "1.0.0",
   "private": true,
-  "description": "Houman Hadian's doctoral project analytics platform codebase",
+  "description": "Houman Hadian's doctoral project analytics platform codebase, to be graduated as an opensource npm package",
   "keywords": [],
   "homepage": "https://www.github.com/emg110/socialytics",
   "bugs": {},
@@ -23,10 +23,7 @@
     "jest": "jest",
     "start": "node src/index.js",
     "start-all": "",
-    "test": "npm run eslint && NODE_ENV= npm run jest",
-    "start-ui": "react-scripts start ./frontend/src",
-    "build-ui": "react-scripts build ./frontend/src",
-    "test-ui": "react-scripts test ./frontend/src"
+    "test": "npm run eslint && NODE_ENV= npm run jest"
   },
   "dependencies": {
     "@feathersjs/authentication": "latest",
@@ -42,11 +39,11 @@
     "@feathersjs/rest-client": "latest",
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
-    "@tensorflow/tfjs": "latest",
     "bootstrap": "^4.3.1",
     "compression": "latest",
     "cors": "latest",
-    "crossfilter2": "latest",
+    "crossfilter2": "^2.0.0-alpha.3",
+    "operative": "^0.4.6",
     "echarts": "latest",
     "echarts-cities-js": "",
     "echarts-countries-js": "",
@@ -106,6 +103,7 @@
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-react": "latest",
+    "eslint-config-standard": "latest",
     "jest": "latest",
     "mocha": "latest",
     "nodemon": "latest",
@@ -115,7 +113,7 @@
     "supertest": "latest"
   },
   "engines": {
-    "node": "^8.0.0",
+    "node": "^8.12.0",
     "npm": ">= 3.0.0"
   },
   "authors": [
@@ -123,7 +121,11 @@
     "H.Hadian <a58976@ualg.pt>"
   ],
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "standard",
+      "airbnb",
+      "eslint:recommended"
+    ]
   },
   "browserslist": [
     ">0.2%",
