--- a/package.json
+++ b/package.json
@@ -40,73 +40,75 @@
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
     "bootstrap": "^4.3.1",
-    "compression": "latest",
+    "compression": "^1.7.4",
     "cors": "latest",
     "crossfilter2": "^2.0.0-alpha.3",
-    "operative": "^0.4.6",
+    "deep-reduce": "latest",
     "echarts": "latest",
     "echarts-cities-js": "",
     "echarts-countries-js": "",
     "echarts-wordcloud": "latest",
     "ejs": "latest",
+    "escape-string-regexp": "latest",
     "express-ejs-layouts": "latest",
     "feathers-memory": "latest",
     "feathers-nedb": "latest",
-    "feathers-objection": "latest",
-    "escape-string-regexp": "latest",
-    "object-path": "latest",
-    "deep-reduce": "latest",
     "feathers-nedb-fuzzy-search": "latest",
+    "feathers-objection": "^3.2.1",
     "fs-extra": "latest",
     "helmet": "latest",
     "immutable": "latest",
     "jetta": "latest",
-    "jquery": "^3.3.1",
-    "knex": "latest",
+    "jquery": "^3.4.0",
+    "knex": "^0.16.5",
     "koa": "latest",
     "koa-better-body": "latest",
     "koa-bodyparser": "latest",
     "koa-ejs": "latest",
     "koa-json": "latest",
     "koa-logger": "latest",
-    "koa-passport": "latest",
+    "koa-passport": "^4.1.3",
     "koa-router": "latest",
-    "koa-session": "latest",
+    "koa-session": "^5.11.0",
     "koa-websocket": "latest",
     "koa2-cors": "latest",
+    "localforage": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
-    "node-nlp": "latest",
+    "node-fetch": "latest",
+    "node-nlp": "^3.0.3",
     "node-postgres-json": "latest",
-    "objection": "latest",
+    "object-path": "latest",
+    "objection": "^1.6.8",
+    "operative": "^0.4.6",
     "pace-js": "latest",
     "passport": "latest",
     "passport-local": "latest",
-    "pg": "latest",
+    "pg": "^7.10.0",
     "pg-hstore": "latest",
     "pivottable": "latest",
     "popper.js": "latest",
+    "request": "latest",
     "ramda": "latest",
     "reductio": "latest",
     "roboto-fontface": "latest",
     "serve-favicon": "latest",
     "socket.io-client": "latest",
     "universe": "latest",
-    "winston": "latest",
-    "localforage": "latest"
+    "winston": "latest"
   },
   "devDependencies": {
     "chai": "latest",
-    "chai-http": "latest",
-    "eslint": "latest",
+    "chai-http": "^4.3.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "latest",
-    "eslint-plugin-import": "latest",
+    "eslint-config-standard": "latest",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-react": "latest",
-    "eslint-config-standard": "latest",
-    "jest": "latest",
-    "mocha": "latest",
-    "nodemon": "latest",
+    "jest": "^24.7.1",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.18.11",
     "request": "latest",
     "request-promise-native": "latest",
     "should": "latest",
@@ -129,8 +131,8 @@
   },
   "jshint": {
     "node": true,
-    "esversion":6,
-    "esnext":false,
+    "esversion": 6,
+    "esnext": false,
     "bitwise": true,
     "eqeqeq": true,
     "immed": true,
