--- a/package.json
+++ b/package.json
@@ -28,9 +28,8 @@
   "dependencies": {
     "@feathersjs/authentication": "latest",
     "@feathersjs/authentication-client": "latest",
-    "@feathersjs/authentication-jwt": "^2.0.10",
-    "@feathersjs/authentication-local": "^1.2.9",
-    "@feathersjs/authentication-oauth2": "^1.3.1",
+    "@feathersjs/authentication-jwt": "latest",
+    "@feathersjs/authentication-local": "latest",
     "@feathersjs/client": "latest",
     "@feathersjs/configuration": "latest",
     "@feathersjs/errors": "latest",
@@ -41,6 +40,7 @@
     "@feathersjs/socketio-client": "latest",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.4",
+    "cookie-parser": "latest",
     "cors": "latest",
     "crossfilter2": "^2.0.0-alpha.3",
     "deep-reduce": "latest",
@@ -71,6 +71,7 @@
     "koa-router": "latest",
     "koa-session": "^5.11.0",
     "koa-websocket": "latest",
+    "koa-ip": "latest",
     "koa2-cors": "latest",
     "localforage": "latest",
     "nedb": "latest",
@@ -88,7 +89,6 @@
     "pg-hstore": "latest",
     "pivottable": "latest",
     "popper.js": "latest",
-    "request": "latest",
     "ramda": "latest",
     "reductio": "latest",
     "roboto-fontface": "latest",
