-Implemented heatmap calendar and fixed some issues

--- a/package.json
+++ b/package.json
@@ -38,17 +38,22 @@
     "@feathersjs/rest-client": "latest",
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
+    "analyse": "latest",
+    "autolinker": "latest",
     "bootstrap": "^4.3.1",
     "compression": "^1.7.4",
     "cookie-parser": "latest",
     "cors": "latest",
     "crossfilter2": "^2.0.0-alpha.3",
+    "datalib": "latest",
     "deep-reduce": "latest",
     "echarts": "latest",
-    "echarts-cities-js": "",
-    "echarts-countries-js": "",
+    "echarts-cities-js": "latest",
+    "echarts-countries-js": "latest",
     "echarts-wordcloud": "latest",
     "ejs": "latest",
+    "emoji-extract-sentiment": "latest",
+    "extract-emoji": "latest",
     "escape-string-regexp": "latest",
     "express-ejs-layouts": "latest",
     "feathers-memory": "latest",
@@ -56,11 +61,17 @@
     "feathers-nedb-fuzzy-search": "latest",
     "feathers-objection": "^3.2.1",
     "fs-extra": "latest",
+    "gender-detection": "latest",
     "helmet": "latest",
     "immutable": "latest",
+    "instapro": "latest",
     "jetta": "latest",
+    "jerzy": "latest",
+    "jStat": "latest",
     "jquery": "^3.4.0",
+    "keyword-extractor": "latest",
     "knex": "^0.16.5",
+    "knwl.js": "latest",
     "koa": "latest",
     "koa-better-body": "latest",
     "koa-bodyparser": "latest",
@@ -73,11 +84,17 @@
     "koa-websocket": "latest",
     "koa-ip": "latest",
     "koa2-cors": "latest",
+    "lineupjs": "latest",
     "localforage": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
     "node-fetch": "latest",
     "node-nlp": "^3.0.3",
+    "natural": "latest",
+    "node-sentiment": "latest",
+    "count-words-array": "latest",
+    "count-words": "latest",
+    "word-counting": "latest",
     "node-postgres-json": "latest",
     "object-path": "latest",
     "objection": "^1.6.8",
@@ -91,8 +108,13 @@
     "ramda": "latest",
     "reductio": "latest",
     "roboto-fontface": "latest",
+    "regression": "latest",
     "serve-favicon": "latest",
+    "simple-statistics": "latest",
     "socket.io-client": "latest",
+    "string-similarity": "latest",
+    "string": "latest",
+    "text-miner": "latest",
     "universe": "latest",
     "winston": "latest"
   },
