- Added Geo utility packages

--- a/package.json
+++ b/package.json
@@ -117,7 +117,10 @@
     "text-miner": "latest",
     "universe": "latest",
     "winston": "latest",
-    "jquery-tags-input":"latest"
+    "jquery-tags-input":"latest",
+    "random-points-generator": "latest",
+    "geolib": "latest",
+    "flatbush": "latest"
   },
   "devDependencies": {
     "chai": "latest",
