-Implemented Geocoding using Nominatim API - Implemented location extraction and transformation (location detaild are added to media JSON object under post JSON object)

--- a/package.json
+++ b/package.json
@@ -121,6 +121,8 @@
     "random-points-generator": "latest",
     "@turf/turf": "latest",
     "flatbush": "latest",
+    "nominatim-geocoder": "latest",
+    "all-the-cities": "latest",
     "rtree": "latest"
   },
   "devDependencies": {
