-Changed text processing approach from ground up to save resources from repetitive running of same operation which is now done one time upon extraction from social media (if configured, ofcourse))

--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "echarts": "latest",
     "echarts-cities-js": "latest",
     "echarts-countries-js": "latest",
-    "echarts-wordcloud": "latest",
     "ejs": "latest",
     "emoji-extract-sentiment": "latest",
     "extract-emoji": "latest",
@@ -125,7 +124,8 @@
     "nominatim-geocoder": "latest",
     "all-the-cities": "latest",
     "rtree": "latest",
-    "worker-nodes": "latest"
+    "worker-nodes": "latest",
+    "emoji-regex": "latest"
   },
   "devDependencies": {
     "chai": "latest",
