--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HoumanProject",
-  "name": "Houman Hadian's Doctoral Project @ualg",
+  "short_name": "Socialytics",
+  "name": "Social data acquisition (ETL) and analytics ",
   "icons": [
     {
       "src": "favicon.ico",
