- Refactored and re implemented logging with winston and chalk libraries

--- a/package.json
+++ b/package.json
@@ -117,6 +117,8 @@
     "text-miner": "latest",
     "universe": "latest",
     "winston": "latest",
+    "dateformat": "latest",
+    "chalk": "latest",
     "jquery-tags-input": "latest",
     "random-points-generator": "latest",
     "@turf/turf": "latest",
@@ -139,8 +141,7 @@
     "eslint-config-airbnb": "latest",
     "eslint-config-standard": "latest",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "latest",
-    "eslint-plugin-react": "latest",
+    "jshint": "latest",
     "jest": "^24.7.1",
     "mocha": "^6.1.4",
     "nodemon": "^1.18.11",
