--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "npm run eslint && NODE_ENV= npm run jest"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "~6.8.2",
     "@feathersjs/authentication": "latest",
     "@feathersjs/authentication-client": "latest",
     "@feathersjs/authentication-jwt": "latest",
@@ -38,118 +39,118 @@
     "@feathersjs/rest-client": "latest",
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
+    "@turf/turf": "latest",
+    "all-the-cities": "latest",
     "analyse": "latest",
-    "autolinker": "latest",
+    "autolinker": "^3.11.0",
     "bootstrap": "^4.3.1",
+    "chalk": "latest",
     "compression": "^1.7.4",
     "cookie-parser": "latest",
     "cors": "latest",
+    "count-words": "latest",
+    "count-words-array": "latest",
     "crossfilter2": "^2.0.0-alpha.3",
+    "csv-writer": "^1.5.0",
     "datalib": "latest",
+    "dateformat": "latest",
     "deep-reduce": "latest",
     "echarts": "latest",
     "echarts-cities-js": "latest",
     "echarts-countries-js": "latest",
     "ejs": "latest",
     "emoji-extract-sentiment": "latest",
-    "extract-emoji": "latest",
+    "emoji-regex": "latest",
     "escape-string-regexp": "latest",
     "express-ejs-layouts": "latest",
-    "feathers-memory": "latest",
-    "feathers-nedb": "latest",
-    "feathers-nedb-fuzzy-search": "latest",
+    "extract-emoji": "latest",
+    "fast-csv": "^3.4.0",
+    "feathers-memory": "^4.0.0",
+    "feathers-nedb": "^5.0.1",
+    "feathers-nedb-fuzzy-search": "^1.2.1",
     "feathers-objection": "^3.2.1",
-    "fs-extra": "latest",
+    "flatbush": "latest",
+    "fs-extra": "^8.1.0",
     "gender-detection": "latest",
-    "helmet": "latest",
+    "helmet": "^3.20.0",
     "immutable": "latest",
     "instapro": "latest",
-    "jetta": "latest",
+    "jStat": "^1.8.5",
     "jerzy": "latest",
-    "jStat": "latest",
-    "jquery": "^3.4.0",
-    "keyword-extractor": "latest",
+    "jetta": "latest",
+    "jquery": "^3.4.1",
+    "jquery-tags-input": "latest",
+    "json-safe-parse": "latest",
+    "keyword-extractor": "0.0.17",
     "knex": "^0.16.5",
     "knwl.js": "latest",
     "koa": "latest",
     "koa-better-body": "latest",
     "koa-bodyparser": "latest",
     "koa-ejs": "latest",
+    "koa-ip": "latest",
     "koa-json": "latest",
-    "koa-logger": "latest",
+    "koa-logger": "^3.2.1",
     "koa-passport": "^4.1.3",
     "koa-router": "latest",
-    "koa-session": "^5.11.0",
-    "koa-websocket": "latest",
-    "koa-ip": "latest",
+    "koa-session": "^5.12.2",
+    "koa-websocket": "^6.0.0",
     "koa2-cors": "latest",
     "lineupjs": "latest",
     "localforage": "latest",
+    "natural": "latest",
+    "ndjson": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
-    "node-fetch": "latest",
-    "node-nlp": "^3.0.3",
-    "natural": "latest",
-    "node-sentiment": "latest",
-    "count-words-array": "latest",
-    "count-words": "latest",
-    "word-counting": "latest",
-    "wordcount": "latest",
+    "node-fetch": "^2.6.0",
+    "node-nlp": "^3.4.0",
     "node-postgres-json": "latest",
+    "node-sentiment": "latest",
+    "nominatim-geocoder": "latest",
     "object-path": "latest",
     "objection": "^1.6.8",
+    "objects-to-csv": "^1.3.3",
     "operative": "^0.4.6",
     "passport": "latest",
     "passport-local": "latest",
-    "pg": "^7.10.0",
-    "pg-hstore": "latest",
+    "pg": "^7.12.0",
+    "pg-hstore": "^2.3.3",
     "pivottable": "latest",
     "popper.js": "latest",
     "ramda": "latest",
+    "random-points-generator": "latest",
     "reductio": "latest",
-    "roboto-fontface": "latest",
     "regression": "latest",
+    "roboto-fontface": "latest",
+    "rtree": "latest",
     "serve-favicon": "latest",
-    "simple-statistics": "latest",
+    "simple-statistics": "^7.0.5",
     "socket.io-client": "latest",
-    "string-similarity": "latest",
     "string": "latest",
-    "text-miner": "latest",
+    "string-similarity": "latest",
+    "text-miner": "^1.3.0",
     "universe": "latest",
     "winston": "latest",
-    "dateformat": "latest",
-    "chalk": "latest",
-    "jquery-tags-input": "latest",
-    "random-points-generator": "latest",
-    "@turf/turf": "latest",
-    "flatbush": "latest",
-    "nominatim-geocoder": "latest",
-    "all-the-cities": "latest",
-    "rtree": "latest",
-    "worker-nodes": "latest",
-    "emoji-regex": "latest",
-    "csv-writer": "latest",
-    "ndjson": "latest",
-    "json-safe-parse": "latest",
-    "objects-to-csv": "latest",
-    "fast-csv": "latest"
+    "word-counting": "latest",
+    "wordcount": "latest",
+    "worker-nodes": "latest"
   },
   "devDependencies": {
     "chai": "latest",
     "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "latest",
-    "eslint-config-standard": "latest",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-standard": "^13.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "generate-unit-test": "latest",
+    "jest": "^24.8.0",
     "jshint": "latest",
-    "jest": "^24.7.1",
-    "mocha": "^6.1.4",
-    "nodemon": "^1.18.11",
+    "mocha": "^6.2.0",
+    "nodemon": "^1.19.1",
     "request": "latest",
     "request-promise-native": "latest",
     "should": "latest",
-    "supertest": "latest",
-    "generate-unit-test": "latest"
+    "supertest": "latest"
   },
   "engines": {
     "node": "^8.12.0",
