--- a/package.json
+++ b/package.json
@@ -40,25 +40,17 @@
     "@feathersjs/rest-client": "latest",
     "@feathersjs/socketio": "latest",
     "@feathersjs/socketio-client": "latest",
-    "@turf/turf": "latest",
-    "all-the-cities": "latest",
-    "analyse": "latest",
     "autolinker": "^3.11.0",
     "bootstrap": "^4.3.1",
     "chalk": "latest",
     "compression": "^1.7.4",
-    "cookie-parser": "latest",
     "cors": "latest",
     "count-words": "latest",
     "count-words-array": "latest",
-    "crossfilter2": "^2.0.0-alpha.3",
     "csv-writer": "^1.5.0",
-    "datalib": "latest",
     "dateformat": "latest",
     "deep-reduce": "latest",
     "echarts": "latest",
-    "echarts-cities-js": "latest",
-    "echarts-countries-js": "latest",
     "ejs": "latest",
     "emoji-extract-sentiment": "latest",
     "emoji-regex": "latest",
@@ -69,72 +61,40 @@
     "feathers-memory": "^4.0.0",
     "feathers-nedb": "^5.0.1",
     "feathers-nedb-fuzzy-search": "^1.2.1",
-    "feathers-objection": "^3.2.1",
-    "flatbush": "latest",
     "fs-extra": "^8.1.0",
     "gender-detection": "latest",
     "helmet": "^3.20.0",
-    "immutable": "latest",
     "instapro": "latest",
-    "jStat": "^1.8.5",
-    "jerzy": "latest",
-    "jetta": "latest",
     "jquery": "^3.4.1",
     "jquery-tags-input": "latest",
-    "json-safe-parse": "latest",
     "keyword-extractor": "0.0.17",
-    "knex": "^0.16.5",
     "knwl.js": "latest",
     "koa": "latest",
-    "koa-better-body": "latest",
-    "koa-bodyparser": "latest",
-    "koa-ejs": "latest",
-    "koa-ip": "latest",
-    "koa-json": "latest",
     "koa-logger": "^3.2.1",
-    "koa-passport": "^4.1.3",
-    "koa-router": "latest",
-    "koa-session": "^5.12.2",
-    "koa-websocket": "^6.0.0",
     "koa2-cors": "latest",
-    "lineupjs": "latest",
+    "koa-bodyparser": "latest",
     "localforage": "latest",
-    "natural": "latest",
     "ndjson": "latest",
     "nedb": "latest",
     "nedb-promise": "latest",
     "node-fetch": "^2.6.0",
     "node-nlp": "^3.4.0",
-    "node-postgres-json": "latest",
     "node-sentiment": "latest",
     "nominatim-geocoder": "latest",
     "object-path": "latest",
-    "objection": "^1.6.8",
     "objects-to-csv": "^1.3.3",
     "operative": "^0.4.6",
     "passport": "latest",
     "passport-local": "latest",
-    "pg": "^7.12.0",
-    "pg-hstore": "^2.3.3",
-    "pivottable": "latest",
     "popper.js": "latest",
     "ramda": "latest",
-    "random-points-generator": "latest",
-    "reductio": "latest",
-    "regression": "latest",
     "roboto-fontface": "latest",
-    "rtree": "latest",
     "serve-favicon": "latest",
-    "simple-statistics": "^7.0.5",
     "socket.io-client": "latest",
-    "string": "latest",
-    "string-similarity": "latest",
-    "text-miner": "^1.3.0",
     "universe": "latest",
     "winston": "latest",
-    "word-counting": "latest",
     "wordcount": "latest",
-    "worker-nodes": "latest"
+    "readline-sync": "latest"
   },
   "devDependencies": {
     "chai": "latest",
@@ -155,7 +115,7 @@
   },
   "engines": {
     "node": "^8.12.0",
-    "npm": ">= 3.0.0"
+    "npm": ">= 5.0.0"
   },
   "authors": [
     "M.Ghiasi <emg110@gmail.com>",
